
   o rma.mv() now allows for struct="GEN" which models correlated random
     effects for any number of predictors, including continuous ones (i.e.,
     this allows for 'random slopes')

   o in the various forest() functions, when options(na.action="na.pass") or
     options(na.action="na.exclude") and an annotation contains NA, this is
     now shown as a blank (instead of NA [NA, NA])

   o escalc() does a bit more housekeeping

   o added currently undocumented arguments 'onlyo1', 'addyi', and 'addvi'
     to escalc() that allow for more flexibility when computing certain bias
     corrections and when computing sampling variances for measures that
     make use of the 'add' and 'to' arguments

   o labbe() gains 'lty' argument

   o labbe() now (invisibly) returns a data frame with the coordinates of
     the points that were drawn (may be useful for manual labeling of points
     in the plot)

   o added a print method for 'profile.rma' objects

   o profile.rma() and plot.profile.rma() gain 'cline' argument

   o fixed an issue with robust.rma.mv() when the model was fitted with
     sparse=TRUE (thanks to Roger Martineau for noting the problem)

   o various method functions (fitted(), resid(), predict(), etc.) behave
     more consistently when model omitted studies with missings

   o predict.rma() gains 'vcov' argument; when set to TRUE, the variance-
     covariance matrix of the predicted values is also returned

   o vcov.rma() can now also return the variance-covariance matrix of the
     fitted values (type="fitted") and the residuals (type="resid")

   o added `$<-` and as.matrix() methods for 'list.rma' objects

   o fixed error in simulate.rma() that would generate too many samples for
     'rma.mv' models

   o added undocumented argument 'time' to model fitting functions; if set
     to TRUE, the model fitting time is printed

   o added more tests (also for parallel operations)

   o reorganized the documentation a bit

